--- a/ProjectSchool/SchoolProject/Views/Anotacoes/Details.cshtml
+++ b/ProjectSchool/SchoolProject/Views/Anotacoes/Details.cshtml
@@ -1,34 +1,25 @@
 ﻿@model SchoolProject.Models.AnotacoesModel
 
 @{
-    Layout = null;
+    ViewBag.Title = "Details";
 }
 
-<!DOCTYPE html>
+<h2>Detalhes</h2>
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Details</title>
-</head>
-<body>
-    <div>
-        <h4>AnotacoesModel</h4>
-        <hr />
-        <dl class="dl-horizontal">
-            <dt>
-                @Html.DisplayNameFor(model => model.texto)
-            </dt>
-    
-            <dd>
-                @Html.DisplayFor(model => model.texto)
-            </dd>
-    
-        </dl>
-    </div>
-    <p>
-        @Html.ActionLink("Edit", "Edit", new { id = Model.cod_anotacao }) |
-        @Html.ActionLink("Back to List", "Index")
-    </p>
-</body>
-</html>
+<div>
+    <hr />
+    <dl class="dl-horizontal">
+        <dt>
+            @Html.DisplayNameFor(model => model.texto)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.texto)
+        </dd>
+
+    </dl>
+</div>
+<p>
+    @Html.ActionLink("Editar", "Edit", new { id = Model.cod_anotacao }, new { @class = "btn btn-success" })
+
+</p>
