--- a/ProjectSchool/SchoolProject/Views/Anotacoes/Index.cshtml
+++ b/ProjectSchool/SchoolProject/Views/Anotacoes/Index.cshtml
@@ -2,12 +2,11 @@
 
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Criar Anotação", "Create","Anotacoes", new { @class = "btn btn-success" })
 </p>
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.texto)
         </th>
         <th></th>
     </tr>
