--- a/ProjectSchool/SchoolProject/Views/Anotacoes/Create.cshtml
+++ b/ProjectSchool/SchoolProject/Views/Anotacoes/Create.cshtml
@@ -3,33 +3,39 @@
 @{
     ViewBag.Title = "Create";
 }
+<style>
 
-<h2>Create</h2>
+    #texto {
+        max-width: 900px;
+        min-height: 300px;
+        width: 100%;
+    }
+
+</style>
+
+<h2>Criar Anotação</h2>
 
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>AnotacoesModel</h4>
+
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
             @Html.LabelFor(model => model.texto, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.texto, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.TextAreaFor(model => model.texto, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.texto, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Criar" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
