--- a/ProjectSchool/SchoolProject/Views/Shared/_Layout.cshtml
+++ b/ProjectSchool/SchoolProject/Views/Shared/_Layout.cshtml
@@ -47,7 +47,7 @@
                     <li>@Html.ActionLink("Sobre", "About", "Home")</li>
                     <li>@Html.ActionLink("Contato", "Contact", "Home")</li>*@
                 </ul>
-                @Html.Partial("_LoginPartial")
+                @*@Html.Partial("_LoginPartial")*@
             </div>
         </div>
     </div>
