--- a/ProjectSchool/SchoolProject/Views/Home/Index.cshtml
+++ b/ProjectSchool/SchoolProject/Views/Home/Index.cshtml
@@ -52,7 +52,7 @@
 <div class="col-md-12 col-sm-12 col-xs-12">
 
 
-    <div class="col-md-4 col-sm-4 col-xs-4">
+    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4" style="padding-right: 50px;">
         <a class="btn btn-app">
             <i class="far fa-comment btn-icon text-center"></i><br />
             <span class="text text-center btn-text">Mensagens</span>
@@ -60,48 +60,48 @@
         </a>
     </div>
 
-    <div class="col-md-4 col-sm-4 col-xs-4">
+    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4" style="padding-right: 50px;">
         <a class="btn btn-app">
             <i class="far fa-envelope btn-icon text-center"></i><br />
             <span class="text text-center btn-text">E-mail</span>
         </a>
     </div>
 
-    <div class="col-md-4 col-sm-4 col-xs-4">
+    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4" style="padding-right: 50px;">
         <a class="btn btn-app">
             <i class="far fa-calendar btn-icon text-center"></i><br />
             <span class="text text-center btn-text">Agenda</span>
         </a>
     </div>
 
-    <div class="col-md-4 col-sm-4 col-xs-4">
+    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4" style="padding-right: 50px;">
         <a class="btn btn-app" onclick="javascript:window.location = '@Url.Action("Index","Anotacoes")'">
             <i class="far fa-edit btn-icon text-center"></i><br />
             <span class="text text-center btn-text">Anotações</span>
 
         </a>
     </div>
-    <div class="col-md-4 col-sm-4 col-xs-4">
-        <a class="btn btn-app">
+    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4" style="padding-right: 50px;">
+        <a class="btn btn-app" onclick="javascript:window.location = '@Url.Action("Index","Aluno")'">
             <i class="far fa-user btn-icon text-center"></i><br />
             <span class="text text-center btn-text">Aluno</span>
         </a>
     </div>
 
-    <div class="col-md-4 col-sm-4 col-xs-4">
+    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4" style="padding-right: 50px;">
         <a class="btn btn-app">
             <i class="far fa-images btn-icon text-center"></i><br />
             <span class="text text-center btn-text">Galeria</span>
         </a>
     </div>
-    <div class="col-md-4 col-sm-4 col-xs-4">
+    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4" style="padding-right: 50px;">
         <a class="btn btn-app">
             <i class="fas fa-wrench btn-icon text-center"></i><br />
             <span class="text text-center btn-text">Configurações</span>
         </a>
     </div>
     
-    <div class="col-md-4 col-sm-4 col-xs-4">
+    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4" style="padding-right: 50px;">
         <a class="btn btn-app">
             <i class="far fa-newspaper btn-icon text-center"></i><br />
             <span class="text text-center btn-text">Eventos</span>
