--- a/ProjectSchool/SchoolProject/Views/Shared/_Layout.cshtml
+++ b/ProjectSchool/SchoolProject/Views/Shared/_Layout.cshtml
@@ -27,11 +27,11 @@
         <div class="container">
             <div class="navbar-header">
 
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                @*<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
-                </button>
+                </button>*@
                 @Html.ActionLink("Home", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
 
                 @if (ViewBag.ishome == null || ViewBag.ishome == false)
@@ -41,14 +41,7 @@
 
 
             </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    @*<li>@Html.ActionLink("Início", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Sobre", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contato", "Contact", "Home")</li>*@
-                </ul>
-                @*@Html.Partial("_LoginPartial")*@
-            </div>
+          
         </div>
     </div>
     <div class="container body-content">
