--- a/ProjectSchool/SchoolProject/Views/Home/Index.cshtml
+++ b/ProjectSchool/SchoolProject/Views/Home/Index.cshtml
@@ -53,7 +53,7 @@
 
 
     <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4" style="padding-right: 50px;">
-        <a class="btn btn-app">
+        <a class="btn btn-app" onclick="javascript:window.location = '@Url.Action("Index","Mensagem")'">
             <i class="far fa-comment btn-icon text-center"></i><br />
             <span class="text text-center btn-text">Mensagens</span>
 
